# render

./: 0.cpp  assimp.cpp  frameBuffer.cpp  illumination.cpp  learn.cpp  main.cpp  test.cpp  zbuffer.cpp  笔记.txt
dependencies/: GLError.h  camera.h  indexBuffer.h  mesh.h  model.h  shader.h  texture.h  vertexBuffer.h
render/: CMakeLists.txt
render/my_gl/: CMakeLists.txt  my_gl.cpp  my_gl.h
render/utils/: CMakeLists.txt
render/utils/inc/utils/: error_handle.h  model.h  my_math.h  screen_buffer.h  tga_image.h
render/utils/src/: model.cpp  tga_image.cpp
render/ztest/utest/: CMakeLists.txt  test.cpp
res/shaders/: 1.model_loading.fs  1.model_loading.vs  blue.shader  envReflect.fs  fragment.shader  frame.fs  green.shader  lightFrag.shader  lightVertex.shader  objectFragment.shader  objectVertex.shader  th.fs  th.vs  vertex.shader
textures/leidian/: leidian.pmx  readme【一定要看】.txt  完整雷电0.92.pmx
